--- a/C3_Aricia_agestis/0.GeographicMap.md
+++ b/C3_Aricia_agestis/0.GeographicMap.md
@@ -18,21 +18,29 @@ Batch convert all the 100m grid references to Lat,Long [here](https://gridrefere
 Final site info input: C3.Aricia_agestis_SiteInfo
 ```
 Population	Site	Gridref_100m	Lat	Long	Pop	Pop2	pch	Colour
-MODC	Pitton	SU205311	51.07886	-1.7087396	Modern	Mod.C	22	seagreen4
-MODC	CaverelCopse	SU200310	51.077978	-1.7158825	Modern	Mod.C	22	seagreen4
-MODC	CaverelCopse	SU199310	51.077982	-1.71731	Modern	Mod.C	22	seagreen4
-MODC	CaverelCopse	SU195308	51.076197	-1.7230305	Modern	Mod.C	22	seagreen4
-MODC	CaverelCopse	SU191310	51.078009	-1.7287296	Modern	Mod.C	22	seagreen4
-MODC	MartinDownNNR	SU036201	50.980297	-1.9500924	Modern	Mod.C	22	seagreen4
-MODC	MartinDownNNR	SU036203	50.982096	-1.9500905	Modern	Mod.C	22	seagreen4
-MODE	Grantown	NJ033263	57.316975	-3.6071842	Modern	Mod.E	22	seagreen4
-MODE	Dunphail	NJ015481	57.512331	-3.6458164	Modern	Mod.E	22	seagreen4
-MUS	Museum	SU2602308620	50.87649918	-1.631500006	Museum	Museum	22	goldenrod
-MUS	Museum	SU2987408208	50.87260056	-1.576799989	Museum	Museum	22	goldenrod
-MUS	Museum	SU2998602236	50.81890106	-1.575700045	Museum	Museum	22	goldenrod
-MUS	Museum	SU3887021934	50.99549866	-1.44749999	Museum	Museum	22	goldenrod
-MUS	Museum	SU4197212417	50.90969849	-1.404399991	Museum	Museum	22	goldenrod
-
+MUS	Museum	TQ310616	51.338404	-0.12074935	Museum	Museum	22	goldenrod
+MUS	Museum	TQ279589	51.314844	-0.1661964	Museum	Museum	22	goldenrod
+MUS	Museum	TQ169531	51.265078	-0.32585236	Museum	Museum	22	goldenrod
+MUS	Museum	TQ323602	51.325522	-0.10261694	Museum	Museum	22	goldenrod
+MUS	Museum	TQ087526	51.262205	-0.44348674	Museum	Museum	22	goldenrod
+MUS	Museum	TQ126501	51.238978	-0.38840068	Museum	Museum	22	goldenrod
+MUS	Museum	TQ251596	51.321757	-0.20610578	Museum	Museum	22	goldenrod
+MODC	Core.Brockham Quarry	TQ197510	51.245623	-0.28644076	Modern	Mod.C	22	seagreen4
+MODC	Core.Hill Park	TQ423560	51.285369	0.039135109	Modern	Mod.C	22	seagreen4
+MODC	Core.Denbies Hillside	TQ138501	51.23874	-0.37121823	Modern	Mod.C	22	seagreen4
+MODC	Core.Bedfont Lakes	TQ078722	51.438549	-0.4504493	Modern	Mod.C	22	seagreen4
+MODC	Core.Bedfont Lakes	TQ081724	51.44029	-0.44607384	Modern	Mod.C	22	seagreen4
+MODC	Core.Bedfont Lakes	TQ082724	51.44027	-0.44463563	Modern	Mod.C	22	seagreen4
+MODC	Core.Nore Hill	TQ375574	51.299128	-0.029111665	Modern	Mod.C	22	seagreen4
+MODC	Core.Bedfont Lakes Country Park	TQ078723	51.439448	-0.45041888	Modern	Mod.C	22	seagreen4
+MODE	Exp.Finningley	SK673980	53.474438	-0.98750698	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Finningley	SK672980	53.474438	-0.98750698	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Finningley	SK673979	53.473539	-0.98752837	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Whisby Nature Park	SK910672	53.194109	-0.63936907	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Whisby Nature Park	SK908662	53.185157	-0.64264555	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Finningley	SK674981	53.475324	-0.98597919	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Finningley	SK672987	53.480742	-0.98886383	Modern	Mod.Exp	22	seagreen4
+MODE	Exp.Finningley	SK671982	53.476261	-0.99047707	Modern	Mod.Exp	22	seagreen4
 ```
 
 
