--- a/C3_Aricia_agestis/0.GeographicMap.md
+++ b/C3_Aricia_agestis/0.GeographicMap.md
@@ -68,7 +68,7 @@ plot(hill, col = grey(0:100/100), legend = FALSE, main = "UK")
 #plot(elevation, col = rainbow(25, alpha = 0.35), add = TRUE)
 
 ##C3 data points
-C3.SiteInfo <- read.table("C3.Ringlet_SiteInfo", header=T)  ##read table of info into R
+C3.SiteInfo <- read.table("C3.Aricia_agestis_SiteInfo", header=T)  ##read table of info into R
 UK.coords <- C3.SiteInfo ##change name of file so that it can be manipulated
 coordinates(UK.coords) <- c("Long", "Lat")  # set spatial coordinates. Remember to check that these make sense
 crs.geo <- CRS("+proj=longlat +ellps=WGS84 +datum=WGS84")  # geographical, datum WGS84
