--- a/C3_Aricia_agestis/0.GeographicMap.md
+++ b/C3_Aricia_agestis/0.GeographicMap.md
@@ -89,7 +89,7 @@ dev.off()
 ```
 
 
-### Supp Fig: Map of Core samples
+### Supp Fig: Zoom in
 
 
 Zoom in on the core sample sites to show that they're not all collected in exactly the same place. 
@@ -100,8 +100,8 @@ library(mapdata)
 UK.coords.Core <- UK.coords[which(UK.coords$Pop!="Mod.E"),] #subset the data to exclude expanding pop
 
 pdf("C3.ZoomedInCoreMap.pdf")
-map("worldHires","UK", xlim=c(-2,-1), ylim=c(50.5,51.5), col="gray90", fill=TRUE)
-points(UK.coords.Core$Long, UK.coords.Core$Lat, pch=UK.coords.Core$pch, col="black", bg=UK.coords.Core$Colour, cex=2)
+map("worldHires","UK", xlim=c(4,1), ylim=c(54,51), col="gray90", fill=TRUE)
+points(UK.coords, cex=1, pch=C3.SiteInfo$pch, col="black", bg=UK.coords$Colour)
 dev.off()
 ```
 
