--- a/C3_Aricia_agestis/0.GeographicMap.md
+++ b/C3_Aricia_agestis/0.GeographicMap.md
@@ -99,8 +99,8 @@ library(maps)
 library(mapdata)
 UK.coords.Core <- UK.coords[which(UK.coords$Pop!="Mod.E"),] #subset the data to exclude expanding pop
 
-pdf("C3.ZoomedInCoreMap.pdf")
-map("worldHires","UK", xlim=c(-4,2), ylim=c(49,54), col="gray90", fill=TRUE)
+pdf("C3.ZoomedInMap.pdf")
+map("worldHires","UK", xlim=c(-4,3), ylim=c(51,54), col="gray90", fill=TRUE)
 points(UK.coords, cex=1, pch=C3.SiteInfo$pch, col="black", bg=UK.coords$Colour)
 dev.off()
 ```
