Update and rename 3.VariantCalling.sh to 3.VariantCalling.md

--- a/C3_Aricia_agestis/3.VariantCalling.md
+++ b/C3_Aricia_agestis/3.VariantCalling.md
@@ -25,7 +25,7 @@ We're working with the smallest chromosome first to test the diploS/HIC analysis
 1. The raw bcf files need to be processed to "see" missing data
 ```
 module load apps/bcftools-1.8
-bcftools filter -S . -O u -e 'FMT/DP=0' job0022.variants.raw.bcf |bcftools view -O b -o job0022.withmissing.bcf
+bcftools filter -S . -O u -e 'FMT/DP=0' job0022.variants.raw.bcf |bcftools view -O v -o job0022.withmissing.vcf
 ```
 
 2. Filters
@@ -34,7 +34,26 @@ We're applying some hard filters to keep only the best loci in the final dataset
 
 a) mapping quality and sequencing quality of >20; b) depth of > 5x; c) max missingness of 0.5
 ```
-vcftools --bcf 
+vcftools --vcf job0022.withmissing.vcf --minQ 20 --min-meanDP 4 --max-alleles 2 --max-missing 0.3 --recode --recode-INFO-all --out job0022.filtered
+
+VCFtools - v0.1.12b
+(C) Adam Auton and Anthony Marcketta 2009
+
+Parameters as interpreted:
+	--vcf job0022.withmissing.vcf
+	--recode-INFO-all
+	--max-alleles 2
+	--min-meanDP 4
+	--minQ 20
+	--max-missing 0.3
+	--out job0022.filtered
+	--recode
+
+After filtering, kept 40 out of 40 Individuals
+Outputting VCF file...
+After filtering, kept 178981 out of a possible 488539 Sites
+Run Time = 28.00 seconds
+
 ```
 
 
