Update and rename 3.VariantCalling.md to 3.VariantCalling&Filtering.md

--- a/C3_Aricia_agestis/3.VariantCalling&Filtering.md
+++ b/C3_Aricia_agestis/3.VariantCalling&Filtering.md
@@ -57,3 +57,12 @@ Run Time = 28.00 seconds
 ```
 
 
+And run this for all the chromosomes: 
+```
+for i in $(ls *bcf); do bcftools filter -S . -O u -e 'FMT/DP=0' $i |bcftools view -O v -o $i.vcf; done
+
+for i in $(ls *bcf.vcf); do vcftools --vcf $i --minQ 20 --min-meanDP 4 --max-alleles 2 --max-missing 0.3 --recode --recode-INFO-all --out $i.filtered; done
+
+```
+
+
