--- a/D3_Pararge_aegeria/0.Geographic.maps.md
+++ b/D3_Pararge_aegeria/0.Geographic.maps.md
@@ -1,1 +1,28 @@
+# Geographic Maps
+
+1. Velocity samples
+
+2. Spain Museum samples
+
+3. Eve's Pop Gen samples from her PhD
+
+
+
+## 1. Velocity samples sites in the UK
+
+
+## 2. Spain Museum samples
+
+I will be sampling 100 museum samples from the elevational gradient in Madrid as a comparison with the UK gradient. 
+
+Sample locations are provided as UTM. 
+
+Spain UTM zone: ED50 / UTM zone 30N - EPSG:23030.
+
+Batch convert UTM to long/lat [here]()
+
+
+
+
+
 
